--- a/README
+++ b/README
@@ -4,8 +4,8 @@ http://www.sumwars.org/
 
 Summoning Wars is an open source role-playing game, featuring both a
 single-player and a multiplayer mode for about 2 to 8 players.  It is available
-and proved to work for Windows and GNU/Linux operating systems, although it
-might as well work in Mac OS X, *BSD and similar operating systems.
+and proved to work for Windows, Mac OS X and GNU/Linux operating systems, although it
+might as well work in *BSD and similar operating systems.
 
 Summoning Wars is free software released under GNU General Public License
 version 3 or later (GPLv3+), which means that you can freely use, copy and
