--- a/translation/de/the_ambush_of_the_undead.po
+++ b/translation/de/the_ambush_of_the_undead.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -52,27 +52,28 @@ msgstr "*urgh*"
 
 #: theFissure.xml
 msgid "Wow, she's gorgeous."
-msgstr "Wow, she's gorgeous"
+msgstr "Wow, die ist ja wunderschön."
 
 #: theFissure.xml
 msgid "You can stare at her later, we have to erase some undead."
-msgstr "You can stare at her later, we have to erase some undead."
+msgstr ""
+"Du kannst sie später noch anstarren. Wir müssen ein paar Untote auslöschen."
 
 #: theFissure.xml
 msgid "Please help us, the mage is badly injured!"
-msgstr "Please help us, the maga is badly injured!"
+msgstr "Bitte helft uns, die Maga ist schwer verwundet!"
 
 #: theFissure.xml
 msgid "He he. Harvest!"
-msgstr "He he. Harvest!"
+msgstr "He he. Ernte!"
 
 #: theFissure.xml
 msgid "I have never seen someone fight like you before."
-msgstr "I have never seen someone fight like you before."
+msgstr "Ich habe noch nie jemanden so kämpfen sehen wie euch."
 
 #: theFissure.xml
 msgid "You don't get out very often, do you."
-msgstr "You don't get out very often, do you."
+msgstr "Du kommst nicht besonders oft raus, oder?"
 
 #: theFissure.xml
 msgid "You developed splendid since the last time we met, didn't you. ##solo"
@@ -88,15 +89,15 @@ msgstr ""
 
 #: theFissure.xml
 msgid "How is the archmage?"
-msgstr "How is the archmaga?"
+msgstr "Wie geht es der Erzmaga?"
 
 #: theFissure.xml
 msgid "Very bad, I'm afraid."
-msgstr "Very bad, I'm afraid."
+msgstr "Sehr schlecht, fürchte ich."
 
 #: theFissure.xml
 msgid "Let me see."
-msgstr "Let me see. _priest"
+msgstr "Lasst mich sehen."
 
 #: theFissure.xml
 msgid "Thank you. That was a close call for a rescue."
@@ -104,81 +105,84 @@ msgstr "Vielen Dank. Das war ziemlich knapp."
 
 #: theFissure.xml
 msgid "How could it even come to this?"
-msgstr "How could it even come to this?"
+msgstr "Wie konnte es überhaupt dazu kommen?"
 
 #: theFissure.xml
 msgid "It's very dangerous to travel so far from the roads."
-msgstr "It's very dangerous to travel so far from the roads."
+msgstr "Es ist sehr gefährlich, so weit abseits der Straßen zu reisen."
 
 #: theFissure.xml
 msgid "Come off it!"
-msgstr "Come off it!"
+msgstr "Lass gut sein!"
 
 #: theFissure.xml
 msgid "No, no, it's the truth."
-msgstr "No, no, it's the truth."
+msgstr "Nein, nein, es ist wahr."
 
 #: theFissure.xml
 msgid ""
 "It was not the best idea, but the streets are not safe these days and thus "
 "we wanted to travel concealed."
 msgstr ""
-"It was not the best idea, but the streets are not safe these days and thus "
-"we wanted to travel concealed."
+"Es war nicht die beste Idee, aber die Straßen sind dieser Tage nicht sicher, "
+"deswegen wollten wir heimlich reisen."
 
 #: theFissure.xml
 msgid "These undead layed an ambush for us here."
-msgstr "These undead layed an ambush for us here."
+msgstr "Diese Untoten haben hier einen Hinterhalt vorbeireitet."
 
 #: theFissure.xml
 msgid "Surprise!"
-msgstr "Surprise!"
+msgstr "Was für eine Überraschung!"
 
 #: theFissure.xml
 msgid "No wonder, this is a combat area."
-msgstr "No wonder, this is combat area."
+msgstr "Kein Wunder, dies ist ein Kriegsgebiet."
 
 #: theFissure.xml
 msgid "No, Dwarfenwall hasn't fallen yet."
-msgstr "No, Dwarfenwall hasn't fallen yet."
+msgstr "Nein, Zwergentrutz ist noch nicht gefallen."
 
 #: theFissure.xml
 msgid ""
 "As long as that city stands, the entry to the lands of the undead is blocked."
 msgstr ""
-"As long as that city stands, the entry to the lands of the undead is blocked."
+"So lange die Stadt steht ist den Untoten der Zugang zu diesen Landen "
+"verwehrt."
 
 #: theFissure.xml
 msgid "But I fear they must have found a way around the citywalls."
-msgstr "But I fear they must have found a way around the citywalls."
+msgstr ""
+"Aber ich fürchte sie müssen einen Weg gefunden haben, die Stadtmauern zu "
+"umgehen."
 
 #: theFissure.xml
 msgid "We mustn't allow this."
-msgstr "We mustn't allow this."
+msgstr "Wir dürfen das nicht zulassen."
 
 #: theFissure.xml
 msgid ""
 "If those monsters could avoid Dwarfenwall they would advance into Aisen "
 "before one week is gone."
 msgstr ""
-"If those monsters could avoid Dwarfenwall they would advance into Aisen "
-"before one week is gone."
+"Wenn diese Monster Zwergentrutz umgehen können sie in Aisen binnen einer "
+"Woche einmarschieren."
 
 #: theFissure.xml
 msgid "It was exceedingly careless of you to leave with so few men."
-msgstr "It was exeedingly careless of you to leave with so few men."
+msgstr "Es war überaus unvorsichtig mit so wenig Männern zu gehen."
 
 #: theFissure.xml
 msgid "The city needs every man it can get!"
-msgstr "The city needs every man it can get!"
+msgstr "Die Stadt braucht jeden Mann, den sie bekommen kann!"
 
 #: theFissure.xml
 msgid "I have a feeling what's going to come in a moment..."
-msgstr "I have a feeling what's going to come in a moment..."
+msgstr "Ich weiß schon, was gleich passiert..."
 
 #: theFissure.xml
 msgid "Listen, Branded One!"
-msgstr "Listen, Branded One!"
+msgstr "Hör zu, Gezeichneter!"
 
 #: theFissure.xml
 msgid "What?!?"
@@ -186,35 +190,37 @@ msgstr "Was?!?"
 
 #: theFissure.xml
 msgid "That's a Branded One?"
-msgstr "That's a Branded One?"
+msgstr "Das ist ein Gezeichneter?"
 
 #: theFissure.xml
 msgid "Let it go."
-msgstr "Let it go."
+msgstr "Lasst gut sein."
 
 #: theFissure.xml
 msgid "She is on our side."
-msgstr "She is on our side."
+msgstr "Sie ist auf unserer Seite."
 
 #: theFissure.xml
 msgid "He is on our side."
-msgstr "He is on our side."
+msgstr "Er ist auf unserer Seite."
 
 #: theFissure.xml
 msgid "Listen, Branded Ones!"
-msgstr "Listen, Branded Ones!"
+msgstr "Hört zu, Gezeichnete."
 
 #: theFissure.xml
 msgid "Those are Branded Ones?"
-msgstr "Those are Branded Ones?"
+msgstr "Das sind Gezeichnete?"
 
 #: theFissure.xml
 msgid "They are on our side."
-msgstr "They are on our side."
+msgstr "Sie sind auf unserer Seite."
 
 #: theFissure.xml
 msgid "Find the way the undead came here and render it useless."
-msgstr "Find the way the undead came here and render it useless."
+msgstr ""
+"Findet den Weg, auf dem die Untoten hier her gekommen sind und macht ihn "
+"unbrauchbar."
 
 #: theFissure.xml
 msgid "Will that be payed extra?"
@@ -222,55 +228,56 @@ msgstr "Wird das extra bezahlt?"
 
 #: theFissure.xml
 msgid "Don't you want to give them some backup?"
-msgstr "Don't you want to give them some backup?"
+msgstr "Wollt Ihr ihnen nicht etwas Unterstützung mitgeben?"
 
 #: theFissure.xml
 msgid "I can do what I want!"
-msgstr "I can do what I want!"
+msgstr "Ich kann machen, was ich will!"
 
 #: theFissure.xml
 msgid "Of course..."
-msgstr "Of course..."
+msgstr "Na klar..."
 
 #: theFissure.xml
 msgid "Slowly he's getting to me..."
-msgstr "Slowly he's getting to me..."
+msgstr "Langsam geht er mir auf die Nerven..."
 
 #: theFissure.xml
 msgid "Only now?"
-msgstr "Only now?"
+msgstr "Jetzt erst?"
 
 #: theFissure.xml
 msgid "Mages have to be naturally patient."
-msgstr "Mages have to be naturally patient."
+msgstr "Magier müssen von Natur aus geduldig sein."
 
 #: theFissure.xml
 msgid "I'm sure the undead found a hidden cave."
-msgstr "I'm sure the undead found a hidden cave."
+msgstr ""
+"Ich bin mir sicher, dass die Untoten eine versteckte Höhle gefunden haben."
 
 #: theFissure.xml
 msgid "Please take this explosion spell."
-msgstr "Please take this explosion spell."
+msgstr "Bitte nehmt diesen Sprengzauber."
 
 #: theFissure.xml
 msgid "It surely will be useful."
-msgstr "It surely will be useful."
+msgstr "Er wird sicher nützlich sein."
 
 #: theFissure.xml
 msgid "I know of a cave system north of here."
-msgstr "I know of a cave system north of here."
+msgstr "Ich kenne ein Höhlensystem nördlich von hier."
 
 #: theFissure.xml
 msgid "They say it's cursed."
-msgstr "They say it's cursed."
+msgstr "Man sagt, es ist verflucht."
 
 #: theFissure.xml
 msgid "Should that frighten me?"
-msgstr "Should that frighten me?"
+msgstr "Sollte mir das Angst machen?"
 
 #: theFissure.xml
 msgid "Should that frighten us?"
-msgstr "Should that frighten us?"
+msgstr "Sollte uns das Angst machen?"
 
 #: theFissure.xml
 msgid "..."
@@ -278,19 +285,19 @@ msgstr "..."
 
 #: theFissure.xml
 msgid "probably not."
-msgstr "probably not."
+msgstr "wahrscheinlich nicht."
 
 #: theFissure.xml
 msgid "Thanks for your help."
-msgstr "Thanks for your help."
+msgstr "Danke für Eure Hilfe."
 
 #: theFissure.xml
 msgid "Good luck!"
-msgstr "Good luck!"
+msgstr "Viel Glück!"
 
 #: theFissure.xml
 msgid "I hope we meet again soon."
-msgstr "I hope we meet again soon."
+msgstr "Ich hoffe, wir treffen uns bald wieder."
 
 #: theFissure.xml
 msgid "greyCurseCaveFis"
