--- a/translation/de/tutorial.po
+++ b/translation/de/tutorial.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -413,7 +413,7 @@ msgstr ""
 
 #: tutorial.xml
 msgid "Akeran!"
-msgstr ""
+msgstr "Akeran!"
 
 #: tutorial.xml
 msgid "Help!"
@@ -421,28 +421,27 @@ msgstr "Hilfe!"
 
 #: tutorial.xml
 msgid "Someone!"
-msgstr ""
+msgstr "Irgendjemand!"
 
 #: tutorial.xml
-#, fuzzy
 msgid "Save me!"
-msgstr "Gespeichertes Spiel"
+msgstr "Rettet mich!"
 
 #: tutorial.xml
 msgid "I will work twice as hard!"
-msgstr ""
+msgstr "Ich werde doppelt so hart arbeiten!"
 
 #: tutorial.xml
 msgid "Dont let me die!"
-msgstr ""
+msgstr "Lasst mich nicht sterben!"
 
 #: tutorial.xml
 msgid "Please!"
-msgstr ""
+msgstr "Bitte!"
 
 #: tutorial.xml
 msgid "Noo!"
-msgstr ""
+msgstr "Neeeeeein!"
 
 #: tutorial.xml
 msgid "Oh Akeran! Close the gates!"
