--- a/translation/de/joringsbridge.po
+++ b/translation/de/joringsbridge.po
@@ -301,6 +301,14 @@ msgid "Help the peasant?"
 msgstr "Dem Bauern helfen?"
 
 #: joringsbridge.xml
+msgid "Yes"
+msgstr ""
+
+#: joringsbridge.xml
+msgid "No"
+msgstr ""
+
+#: joringsbridge.xml
 msgid "Only a stone would watch deedless."
 msgstr "Nur ein Stein würde tatenlos zusehen."
 
@@ -349,11 +357,11 @@ msgid "Prince, we take the job!"
 msgstr "Prinz, wir übernehmen den Auftrag!"
 
 #: joringsbridge.xml
-msgid "Bei Marek!"
+msgid "By Marek!"
 msgstr ""
 
 #: joringsbridge.xml
-msgid "Wer ist das?"
+msgid "Who is that?"
 msgstr ""
 
 #: joringsbridge.xml
