--- a/translation/it/the_besieged_farm.po
+++ b/translation/it/the_besieged_farm.po
@@ -161,8 +161,8 @@ msgstr "Ma certo! Che sciocco che sono."
 #: besieged_farm.xml
 #, fuzzy
 msgid ""
-"Really now. Did you think she'd use carrier pigeons in this day and age?\".."
-"name..\". Dachtest du, irgendwer benutzt heutzutage noch Brieftauben?"
+"Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
+"day and age?"
 msgstr ""
 "Credi davvero che lei voglia utilizzare di questi tempi i piccioni "
 "viaggiatori?"
