--- a/translation/ru/fortify_dwarfenwall.po
+++ b/translation/ru/fortify_dwarfenwall.po
@@ -271,8 +271,7 @@ msgstr ""
 
 #: fortify_dwarfenwall.xml
 msgid ""
-"What?!! Der Fluch kann von uns genommen werden? Warum hoere ich das erst "
-"jetzt?"
+"What?!! The curse can be lifted from us? Why do I hear of this only now?"
 msgstr ""
 
 #: fortify_dwarfenwall.xml
@@ -629,14 +628,14 @@ msgstr ""
 
 #: fortify_dwarfenwall.xml
 msgid ""
-"Mach das sofort rueckgaengig, oder jede Wache in Aisen wird hinter dir her "
-"sein, Verfluchte!"
+"Reverse this at once or every guard of Aisen will be on your trail, Cursed "
+"One! ##female"
 msgstr ""
 
 #: fortify_dwarfenwall.xml
 msgid ""
-"Mach das sofort rueckgaengig, oder jede Wache in Aisen wird hinter dir her "
-"sein, Verfluchter!"
+"Reverse this at once or every guard of Aisen will be on your trail, Cursed "
+"One! ##male"
 msgstr ""
 
 #: fortify_dwarfenwall.xml
@@ -652,7 +651,7 @@ msgid "And it's Branded One."
 msgstr ""
 
 #: fortify_dwarfenwall.xml
-msgid "Du bist besser bereit, die Konsequenzen zu tragen, elende Kreatur."
+msgid "You are better prepared to suffer the consequences, wretched creature."
 msgstr ""
 
 #: fortify_dwarfenwall.xml
@@ -876,4 +875,3 @@ msgstr ""
 #: fortify_dwarfenwall.xml
 msgid "Let's gain their trust."
 msgstr ""
-
