--- a/translation/ru/the_besieged_farm.po
+++ b/translation/ru/the_besieged_farm.po
@@ -143,8 +143,8 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid ""
-"Really now. Did you think she'd use carrier pigeons in this day and age?\".."
-"name..\". Dachtest du, irgendwer benutzt heutzutage noch Brieftauben?"
+"Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
+"day and age?"
 msgstr ""
 
 #: besieged_farm.xml
