--- a/translation/de/fortify_dwarfenwall.po
+++ b/translation/de/fortify_dwarfenwall.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -282,6 +282,8 @@ msgstr "Das kennen wir schon, also spart dir die langen Reden."
 msgid ""
 "What?!! The curse can be lifted from us? Why do I hear of this only now?"
 msgstr ""
+"Was?!! Der Fluch kann von uns genommen werden? Warum höre ich erst jetzt "
+"davon?"
 
 #: fortify_dwarfenwall.xml
 msgid "As you wish."
@@ -675,12 +677,16 @@ msgid ""
 "Reverse this at once or every guard of Aisen will be on your trail, Cursed "
 "One! ##female"
 msgstr ""
+"Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
+"sein, Verfluchte!"
 
 #: fortify_dwarfenwall.xml
 msgid ""
 "Reverse this at once or every guard of Aisen will be on your trail, Cursed "
 "One! ##male"
 msgstr ""
+"Mach das sofort rückgängig oder jede Wache in Aisen wird hinter dir her "
+"sein, Verfluchter!"
 
 #: fortify_dwarfenwall.xml
 msgid "Right, right."
@@ -696,7 +702,7 @@ msgstr "Und das heißt Gezeichnete."
 
 #: fortify_dwarfenwall.xml
 msgid "You are better prepared to suffer the consequences, wretched creature."
-msgstr ""
+msgstr "Du bist besser bereit, die Konsequenzen zu tragen, elende Kreatur."
 
 #: fortify_dwarfenwall.xml
 msgid "Blind and deaf, but not mute, eh?"
