--- a/translation/de/herb_collector.po
+++ b/translation/de/herb_collector.po
@@ -12,7 +12,7 @@ msgstr ""
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -25,11 +25,12 @@ msgid "And another good deed done. I could get used to this."
 msgstr "Und wieder eine gute Tat mehr. Ich könnte mich fast daran gewöhnen."
 
 #: herbalist.xml
-#, fuzzy
 msgid ""
 "The herbalist of Joringsbridge wants to have the berries of 10 bushes. \".."
 "(10 - herbalist.bushes)..\" berries have been collected."
-msgstr "Die Kräuterfrau aus Joringsbück will die Beeren von 10 Büschen haben."
+msgstr ""
+"Die Kräuterfrau aus Joringsbück will die Beeren von 10 Büschen haben. \".."
+"(10 - herbalist.bushes)..\" Beeren sind schon gesammelt worden."
 
 #: herbalist.xml
 msgid "joringsbridge"
