--- a/translation/de/joringsbridge.po
+++ b/translation/de/joringsbridge.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -220,7 +220,7 @@ msgstr "2000 Goldstücke jedem, der diesem treuen Mann hilft!"
 
 #: joringsbridge.xml
 msgid "ts"
-msgstr ""
+msgstr "ts"
 
 #: joringsbridge.xml
 msgid "2000 gold pieces."
@@ -302,11 +302,11 @@ msgstr "Dem Bauern helfen?"
 
 #: joringsbridge.xml
 msgid "Yes"
-msgstr ""
+msgstr "Ja"
 
 #: joringsbridge.xml
 msgid "No"
-msgstr ""
+msgstr "Nein"
 
 #: joringsbridge.xml
 msgid "Only a stone would watch deedless."
@@ -358,19 +358,17 @@ msgstr "Prinz, wir übernehmen den Auftrag!"
 
 #: joringsbridge.xml
 msgid "By Marek!"
-msgstr ""
+msgstr "Bei Marek!"
 
 #: joringsbridge.xml
 msgid "Who is that?"
-msgstr ""
+msgstr "Wer ist das?"
 
 #: joringsbridge.xml
-#, fuzzy
 msgid "Aren't you the... auxiliary forces of the council? ##solo"
-msgstr "Seid Ihr nicht die... Hilfstruppe des Konzils? ##solo"
+msgstr "Seid Ihr nicht die... Hilfstruppe des Konzils?"
 
 #: joringsbridge.xml
-#, fuzzy
 msgid "Aren't you the... auxiliary forces of the council?"
 msgstr "Seid Ihr nicht die... Hilfstruppe des Konzils?"
 
