--- a/translation/de/scout.po
+++ b/translation/de/scout.po
@@ -7,24 +7,26 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: scout.xml
 msgid "The wounded scout"
-msgstr ""
+msgstr "Der verletzte Späher"
 
 #: scout.xml
 msgid ""
 "I rescued a scout and hopefully gained some goodwill from the local militia. "
 "Whatever good that will do."
 msgstr ""
+"Ich habe einen Späher gerettet und hoffentlich etwas Wohlwollen von der "
+"örtlichen Miliz gewonnen, wofür auch immer das gut ist."
 
 #: scout.xml
 msgid ""
@@ -34,212 +36,242 @@ msgid ""
 "be an excuse to venture deeper into the caves that are obviously not under "
 "control by the undead."
 msgstr ""
+"Ich bin tatsächlich in den Goblinverseuchten Höhlen westlich von "
+"Zwergentrutz über einen Späher gestolpert. Er ist verletzt, hat seine "
+"Ausrüstung an einige Spinnen verloren und mich gebeten, das wieder in "
+"Ordnung zu bringen. Ich frage mich wirklich, ob ich das tun sollte... "
+"andererseits könnte das eine Ausrede sein, tiefer in die Höhlen zu gehen, "
+"die eindeutig nicht unter untoter Kontrolle stehen."
 
 #: scout.xml
 msgid "greyCurseCave"
 msgstr "Verfluchte Höhle"
 
 #: scout.xml
-#, fuzzy
 msgid "Wounded Scout"
-msgstr "Untote Sense"
+msgstr "Verletzter Späher"
 
 #: scout.xml
 msgid "Are you alive?"
-msgstr ""
+msgstr "Lebst du?"
 
 #: scout.xml
 msgid "Hey, are you alright?"
-msgstr ""
+msgstr "Hey, geht es dir gut?"
 
 #: scout.xml
 msgid "Does it look... 'alright' to you?"
-msgstr ""
+msgstr "Sieht das... 'gut' für dich... aus?"
 
 #: scout.xml
 msgid "Pretty much, yes."
-msgstr ""
+msgstr "Eigentlich schon."
 
 #: scout.xml
 msgid "You can still talk, right?"
-msgstr ""
+msgstr "Du kannst immer noch reden, oder?"
 
 #: scout.xml
 msgid ""
 "Yeah, right... now, when you're done laughing... maybe you could help me?"
 msgstr ""
+"Ja, klar... wenn du jetzt mit lachen... fertig bist... kannst du mir "
+"vielleicht... helfen?"
 
 #: scout.xml
 msgid "I guess I could patch you up, but I can't carry you out of here."
 msgstr ""
+"Ich schätze, ich könnte dich zusammenflicken, aber ich kann dich hier nicht "
+"raus tragen."
 
 #: scout.xml
 msgid ""
 "Where I'm headed you will most certainly die a quick and meaningless death."
 msgstr ""
+"Da wo ich hingehe wirst du höchstwahrscheinlich einen schnellen und "
+"unnötigen Tod sterben."
 
 #: scout.xml
 msgid "I can... watch my own back..."
-msgstr ""
+msgstr "Ich kann... auf mich selbst aufpassen..."
 
 #: scout.xml
 msgid "Most of the time... at least."
-msgstr ""
+msgstr "Meistens... jedenfalls."
 
 #: scout.xml
 msgid "But spying on the undead... evading... those blasted goblins..."
-msgstr ""
+msgstr "Aber den Untoten nachspionieren... verdammten Goblins... ausweichen..."
 
 #: scout.xml
 msgid "I got a little... careless."
-msgstr ""
+msgstr "Bin etwas... unvorsichtig geworden."
 
 #: scout.xml
 msgid "West of here... there's a cave... pretty deep inside..."
-msgstr ""
+msgstr "Westlich von hier... da ist eine Höhle... ziemlich tief drinnen..."
 
 #: scout.xml
 msgid ""
 "Lot's of wolves... but a nest of spiders, too... thought I had... it under "
 "control"
 msgstr ""
+"Viele Wölfe... aber auch ein Nest Spinnne... dachte ich hätte es... unter "
+"Kontrolle."
 
 #: scout.xml
 msgid ""
 "really big one... there. Spider, I mean... got me good... lost my gear... "
 "but got away... somehow"
 msgstr ""
+"wirklich große da... Spinne, meine ich... hat mich erwischt... verlor meine "
+"Ausrüstung... aber bin irgendwie... entkommen."
 
 #: scout.xml
 msgid ""
 "The venom... can't move at all... anymore... I had an antidote in my pack..."
 msgstr ""
+"Das Gift... kann mich nicht mehr... bewegen... hatte ein Gegengift in meinem "
+"Rucksack..."
 
 #: scout.xml
 msgid "So... if you could get... me my gear, I... would be good to go again..."
 msgstr ""
+"Also... wenn du mein... Zeug besorgen könntest... wäre schnell wieder... auf "
+"den Beinen..."
 
 #: scout.xml
 msgid "If you're... not afraid... that is."
-msgstr ""
+msgstr "Wenn du... keine Angst hast... heißt das."
 
 #: scout.xml
 msgid "You have a strange manner of asking for favors."
-msgstr ""
+msgstr "Du hast eine seltsame Art, um einen Gefallen zu bitten."
 
 #: scout.xml
 msgid "But since I don't have to carry you to safety, I guess it is allright."
 msgstr ""
+"Aber da ich dich nicht in Sicherheit bringen kann schätze ich, es ist okay."
 
 #: scout.xml
 msgid "This wouldn't happen to be your stuff, would it?"
-msgstr ""
+msgstr "Das ist nicht zufällig dein Zeug?"
 
 #: scout.xml
 msgid "You already... found it?"
-msgstr ""
+msgstr "Du hast es... schon gefunden?"
 
 #: scout.xml
 msgid "Thanks..."
-msgstr ""
+msgstr "Danke..."
 
 #: scout.xml
 msgid "Still alive?"
-msgstr ""
+msgstr "Immer noch am Leben?"
 
 #: scout.xml
 msgid "Do you... have my gear?"
-msgstr ""
+msgstr "Hast du... meine Ausrüstung?"
 
 #: scout.xml
 msgid "Not yet, no."
-msgstr ""
+msgstr "Noch nicht, nein."
 
 #: scout.xml
 msgid ""
 "Shame. It seems I'm already capable of... being paralyzed... without your "
 "help."
-msgstr ""
+msgstr "Schade. Kann auch ganz gut... ohne deine Hilfe... gelähmt sein."
 
 #: scout.xml
 msgid ""
 "Thanks for... checking back on me though. I'll be here... if you need me."
-msgstr ""
+msgstr "Aber danke... fürs überprüfen. Ich bin hier... falls du mich brauchst."
 
 #: scout.xml
 msgid "You are kind of messed up, you know that?"
-msgstr ""
+msgstr "Du bist irgendwie schräg, weißt du das?"
 
 #: scout.xml
 msgid "..."
-msgstr ""
+msgstr "..."
 
 #: scout.xml
 msgid "Here it is."
-msgstr ""
+msgstr "Hier ist es."
 
 #: scout.xml
 msgid "good... now, blue potion"
-msgstr ""
+msgstr "Gut... jetzt, blauer Trank."
 
 #: scout.xml
-#, fuzzy
 msgid "A blue potion?"
-msgstr "Echotrank"
+msgstr "Ein blauer Trank?"
 
 #: scout.xml
 msgid "You do realize there is at least a score of 'blue' potions here?"
 msgstr ""
+"Du bist dir darüber im klaren, dass es hier drin mindestens zwei Dutzend "
+"'blaue' Tränke gibt?"
 
 #: scout.xml
 msgid ""
 "They just... turn out that... way everytime... it's the one... with the "
 "light shade of turquoise."
 msgstr ""
+"Die werden... einfach immer so... es ist der... mit der türkisen "
+"Schattierung."
 
 #: scout.xml
 msgid "No... too... light blue"
-msgstr ""
+msgstr "Nein... zu hell... blau"
 
 #: scout.xml
 msgid "That's... it"
-msgstr ""
+msgstr "Das ist... er"
 
 #: scout.xml
 msgid "Finally!"
-msgstr ""
+msgstr "Endlich!"
 
 #: scout.xml
 msgid "Remember me not to kill you after all the trouble I went through."
-msgstr ""
+msgstr "Erinnere mich daran, dich nach all der Mühe nicht umzubringen."
 
 #: scout.xml
 msgid "Gladly. Really, thank you for saving my hide."
-msgstr ""
+msgstr "Mit Freuden. Wirklich, danke das du meine Haut gerettest hast."
 
 #: scout.xml
 msgid "You best stay out of trouble."
-msgstr ""
+msgstr "Du hälst dich besser von Ärger fern."
 
 #: scout.xml
 msgid ""
 "Because I seriously do NOT want to rummage through your happy collection of "
 "identical looking special-purpose-potions."
 msgstr ""
+"Weil ich nämlich KEINE Lust habe, mich noch einmal durch deine fröhliche "
+"Sammlung identisch aussehender Spezialtränke zu wühlen."
 
 #: scout.xml
 msgid "Sorry about that. Normally I'm the only one who has to keep them apart."
 msgstr ""
+"Das tut mir Leid. Normalerweise bin ich der einzige, der sie "
+"auseinanderhalten muss."
 
 #: scout.xml
 msgid "Allright. Now that this is done, I will be on my way."
 msgstr ""
+"Also gut. Da das jetzt vorbei ist, werde ich mich wieder auf den Weg machen."
 
 #: scout.xml
 msgid ""
 "I will rest a little more and then be on my way too, but in the other "
 "direction."
 msgstr ""
+"Ich werde mich noch etwas ausruhen und dann auch auf den Weg machen. "
+"Allerding in die andere Richtung."
 
 #: scout.xml
 msgid "greyWolfcave"
