--- a/translation/de/the_besieged_farm.po
+++ b/translation/de/the_besieged_farm.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2010-12-07 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -161,13 +161,12 @@ msgid "Of course. Silly of me."
 msgstr "Natürlich. Dumm von mir."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
 "day and age?"
 msgstr ""
-"Also ehrlich, dachtest du, sie würde in der heutigen Zeit eine Brieftaube "
-"benutzen?"
+"Also ehrlich, \"..name..\", dachtest du, sie würde in der heutigen Zeit eine "
+"Brieftaube benutzen?"
 
 #: besieged_farm.xml
 msgid "Let's just go collect the money."
