--- a/translation/it/sumwars.po
+++ b/translation/it/sumwars.po
@@ -1095,123 +1095,6 @@ msgstr "Amuleto di corallo"
 msgid "gold amulet"
 msgstr "Amuleto d'oro"
 
-#: goblin_raid.xml
-#, fuzzy
-msgid "goblin_raid"
-msgstr "Goblin bandito"
-
-#: goblin_raid.xml
-msgid ""
-"Well, I got a little money for killing some goblins I would have wasted "
-"anyway. Not a bad day."
-msgstr ""
-
-#: goblin_raid.xml
-msgid ""
-"It seems the sergeant from Joringsbridge is willing to pay, but he wants me "
-"to help those peasants first. There's no trust in this world anymore."
-msgstr ""
-
-#: goblin_raid.xml
-msgid ""
-"I discovered plans of a goblin raid set for a village called Joringsbridge. "
-"They were found amongst the remains of some goblin tribe. Guess I busted "
-"that party prematurely. Maybe someone official will appreciate not having "
-"hordes of goblins kicking in their doors."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "aisDarkClearing"
-msgstr "La tetra radura"
-
-#: goblin_raid.xml
-msgid "Sergeant Lutterer"
-msgstr "Sergente Lutterer"
-
-#: goblin_raid.xml
-msgid "Crude battle plans"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Hey, sergeant, I found these in the woods with some goblins."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "This looks like it could be Joringsbridge. Are you sure it's reliable?"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Some kind of head honcho shaman had them, so I figure they mean it."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Meant it. Whatever."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Hey, sergeant, ready to pay for the pre-emptive rescue of the village?"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "I guess you can be trusted."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Let me thank you on behalf of the whole village."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "It's always a pleasure when a good deed goes rewarded."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Sorry, but I don't know you."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Maybe I will show some gratitude after you help Michel's family."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "As they say: One hand washes the other."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Do you want to help the peasant?"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Yes"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "No"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Then I better get back to saving helpless peasants, no?"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Fine, I'll wipe out those goblins for you."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "You do realise there's plenty more where they came from?"
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Just go already."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "Whatever. It's not like I need the money or anything."
-msgstr ""
-
-#: goblin_raid.xml
-msgid "And I could care less what happens to some peasant family."
-msgstr ""
-
 #: joringsbridge_npc.xml
 msgid "Gertlinde Kampfer"
 msgstr "Gertlinde Kampfer"
@@ -1241,8 +1124,8 @@ msgid "Marco"
 msgstr "Marco"
 
 #: joringsbridge_npc.xml
-msgid "Fundgegenstaende"
-msgstr "Oggetti smarriti"
+msgid "Objects found"
+msgstr ""
 
 #: joringsbridge_npc.xml
 msgid "What are these Items?"
@@ -1262,6 +1145,10 @@ msgid ""
 "have it back."
 msgstr ""
 "Se qualcosa e' tuo dillo. Potrai riaverlo indietro per una minima somma."
+
+#: joringsbridge_npc.xml
+msgid "Sergeant Lutterer"
+msgstr "Sergente Lutterer"
 
 #: joringsbridge_npc.xml
 msgid "Joringsbridge"
@@ -1744,6 +1631,10 @@ msgid "aisStonePlains"
 msgstr "Pianure rocciose"
 
 #: aisen.xml
+msgid "aisDarkClearing"
+msgstr "La tetra radura"
+
+#: aisen.xml
 msgid "aisWideHeath"
 msgstr "La vasta spianata"
 
@@ -2179,7 +2070,7 @@ msgstr "Scudo di ferro"
 #: mage_ablt.xml
 msgid ""
 "The mage surrounds himself with an armor of lightning, that will stun and "
-"damage enemies who are bolt enough to attack in close combat."
+"damage enemies who are bold enough to attack in close combat."
 msgstr ""
 
 #: mage_ablt.xml
@@ -2275,7 +2166,7 @@ msgstr ""
 
 #: priest_ablt.xml
 msgid ""
-"The party will be immune to blind and berserk for some time. With increasing "
+"The party will be immune to blind and mute for some time. With increasing "
 "willpower the priest can hold this effect longer."
 msgstr ""
 
@@ -2356,7 +2247,7 @@ msgid "Cure"
 msgstr ""
 
 #: priest_ablt.xml
-msgid "The priest restores the hitpoints of one partymemeber."
+msgid "The priest restores the hitpoints of one partymember."
 msgstr ""
 
 #: priest_ablt.xml
@@ -3365,17 +3256,17 @@ msgid "wolf"
 msgstr "Lupo"
 
 #: aisenMonsterStats.xml
-#, fuzzy
-msgid "Spider"
-msgstr "Ragno"
-
-#: aisenMonsterStats.xml
 msgid "Psychotic Spider"
 msgstr ""
 
 #: aisenMonsterStats.xml
 #, fuzzy
 msgid "Cave Spider"
+msgstr "Ragno"
+
+#: aisenMonsterStats.xml
+#, fuzzy
+msgid "Spider"
 msgstr "Ragno"
 
 #: aisenMonsterStats.xml
@@ -3566,6 +3457,13 @@ msgstr "Mandragora"
 #: npcStats.xml
 msgid "Peasant"
 msgstr "Contadino"
+
+#, fuzzy
+#~ msgid "goblin_raid"
+#~ msgstr "Goblin bandito"
+
+#~ msgid "Fundgegenstaende"
+#~ msgstr "Oggetti smarriti"
 
 #, fuzzy
 #~ msgid "A blue potion?"
