--- a/translation/de/sumwars.po
+++ b/translation/de/sumwars.po
@@ -7,12 +7,12 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-12-13 \n"
+"PO-Revision-Date: 2010-12-14 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -1820,9 +1820,8 @@ msgid ""
 msgstr ""
 
 #: unique_ablt.xml
-#, fuzzy
 msgid "Summon Ice Obelisk"
-msgstr "Eisobelisk"
+msgstr "Eisobelisk beschwören"
 
 #: unique_ablt.xml
 msgid "Creates a obelisk of ice."
@@ -2095,13 +2094,12 @@ msgid "Static shield"
 msgstr "Statischer Schild"
 
 #: mage_ablt.xml
-#, fuzzy
 msgid ""
 "The mage surrounds himself with an armor of lightning, that will stun and "
 "damage enemies who are bold enough to attack in close combat."
 msgstr ""
 "Der Magier umgibt sich mit einer Rüstung aus Blitzen, die Gegner schädigen "
-"und lähmen, die dreist genug sind, ihn im Nahkampf anzugreifen."
+"und lähmen, die dreist genug sind ihn im Nahkampf anzugreifen."
 
 #: mage_ablt.xml
 msgid "Thunderstorm"
@@ -2213,7 +2211,6 @@ msgid "Omniscent Eye"
 msgstr "Allessehendes Auge"
 
 #: priest_ablt.xml
-#, fuzzy
 msgid ""
 "The party will be immune to blind and mute for some time. With increasing "
 "willpower the priest can hold this effect longer."
@@ -2311,7 +2308,6 @@ msgid "Cure"
 msgstr "Heilung"
 
 #: priest_ablt.xml
-#, fuzzy
 msgid "The priest restores the hitpoints of one partymember."
 msgstr ""
 "Der Priester stellt die Lebenspunkte eines Gruppenmitglieds wieder her."
@@ -2513,9 +2509,8 @@ msgid "Throw a bomb"
 msgstr ""
 
 #: monster_ablt.xml
-#, fuzzy
 msgid "saboteur_move"
-msgstr "Saboteur"
+msgstr "Saboteur Bewegung"
 
 #: monster_ablt.xml
 msgid "Flee from enemy"
